fixed scroll on jump menus

--- a/app/assets/sass/documentation/_docpage-header.scss
+++ b/app/assets/sass/documentation/_docpage-header.scss
@@ -41,13 +41,12 @@
     color: rgba(255, 255, 255, 1);
     font-family: $font-family-ps-regular;
     z-index: 4;
-    @include breakpoint(screen-xs) {
-
-    }
     .jump-menu {
       padding: 15px 0 0;
       white-space: nowrap;
-      overflow-y: scroll;
+      @include breakpoint(screen-xs) {
+        overflow-x: scroll;
+      }
       li {
         font-size: 1em;
         margin-right: 1.5%;
@@ -80,15 +79,13 @@
   background-image: linear-gradient(90deg, rgba(0, 0, 0, .1), rgba(0, 0, 0, .1)),
   linear-gradient(90deg, $pb-blue 0%, $pb-magenta 100%);
 
-
-
   // not docked
   &.headroom-top {
     // position: relative;
     height: 50px;
-     @include breakpoint(screen-xs) {
-        top: 119px;
-      }
+    @include breakpoint(screen-xs) {
+      top: 119px;
+    }
   }
 
   //docked
@@ -109,7 +106,7 @@
   border: 1px solid #c0c0c0;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, .2);
   margin-bottom: 15px;
-  +.btn {
+  + .btn {
     min-width: 120px;
     margin-bottom: 40px;
   }
